# hplip

./: COPYING  Makefile.am  Makefile.in  README.md  aclocal.m4  align.py  check-plugin.py  check.py  clean.py  colorcal.py  config_usb_printer.py  configure  configure.in  cups_drv.inc  dat2drv.py  devicesettings.py  diagnose_plugin.py  diagnose_queues.py  doctor.py  fab.py  faxsetup.py  firmware.py  foomatic_drv.inc  hplip-install  hplip-systray.desktop.in  hplip.conf.in  hplip.desktop.in  hplip.list.in  info.py  init-iptables-firewall  init-suse-firewall  install.py  levels.py  linefeedcal.py  makecopies.py  makeuri.py  pkservice.py  plugin.py  pqdiag.py  print.py  (+14 more)
base/: LedmWifi.py  avahi.py  codes.py  device.py  dime.py  g.py  ldif.py  logger.py  magic.py  models.py  module.py  password.py  pkit.py  queues.py  sixext.py  smart_install.py  status.py  utils.py  validation.py
common/: utils.c  utils.h
data/localization/: hplip_de.ts  hplip_es.ts  hplip_fr.ts  hplip_it.ts  hplip_pt.ts  hplip_ru.ts  hplip_zh.ts
data/policykit/: com.hp.hplip.service  com.hp.hplip.service.in
data/rules/: 20-hplip-devices.fdi  56-hpmud.rules  56-hpmud_sysfs.rules  hplip-printer@.service
doc/: commandline.html  copying.html  devicemanager.html  faxtrouble.html  gettinghelp.html  hpscan.html  index.html  mainttask.html  plugins.html  print.html  printing.html  printoptions.html  printtroubleshooting.html  scanning.html  scantrouble.html  sendfax.html  setup.html  systray.html  troubleshooting.html  uninstalling.html  upgrading.html
doc/styles/: css.css
fax/: ledmfax.py  soapfax.py
fax/backend/: hpfax.py
installer/: core_install.py  dcheck.py  text_install.py
io/hpmud/: dot4.c  dot4.h  hpmud.c  hpmud.h  hpmudi.h  jd.c  jd.h  list.h  mlc.c  mlc.h  model.c  musb.c  musb.h  musb_libusb01.c  pml.c  pml.h  pp.c  pp.h
io/mudext/: hpmudext.c
ip/: hpip.h  ipdefs.h  ipmain.c  xbi2gray.c  xchgbpp.c  xcolrspc.c  xconvolve.c  xcrop.c  xfakemono.c  xfax.c  xform.h  xgamma.c  xgray2bi.c  xgrayout.c  xinvert.c  xjpg_dct.c  xjpg_dct.h  xjpg_dec.c  xjpg_enc.c  xjpg_fix.c  xjpg_huf.c  xjpg_huf.h  xjpg_mrk.h  xmatrix.c  xpad.c  xpcx.c  xpnm.c  xrotate.c  xsaturation.c  xscale.c  xskel.c  xtable.c  xthumb.c  xtiff.c  xtonemap.c  xyxtract.c
pcard/: fat.c  fat.h  photocard.py  ptest.c  ptest.h
pcard/pcardext/: pcardext.c
plugins/: dj450.py  powersettings.py  powersettings2.py  powersettingsdialog.py  powersettingsdialog_base.py  powersettingsdialog_base.ui
prnt/: cups.py
prnt/backend/: hp.c
prnt/cupsext/: cupsext.c  cupsext.h
prnt/drv/: hpcups.drv.in  hpijs.drv.in  hpijs.drv.in.template
prnt/filters/: hpps
prnt/hpcups/: BreakTables.cpp  ColorMaps.h  ColorMatcher.cpp  ColorMatcher.h  CommonDefinitions.h  Compressor.cpp  Compressor.h  Encapsulator.cpp  Encapsulator.h  EncapsulatorFactory.cpp  EncapsulatorFactory.h  ErnieFilter.cpp  ErnieFilter.h  HPCupsFilter.cpp  HPCupsFilter.h  Halftoner.cpp  Halftoner.h  Hbpl1.cpp  Hbpl1.h  Hbpl1_Wrapper.h  Job.cpp  Job.h  LJColor.cpp  LJColor.h  LJFastRaster.cpp  LJFastRaster.h  LJJetReady.cpp  LJJetReady.h  LJMono.cpp  LJMono.h  LJZjStream.cpp  LJZjStream.h  LJZxStream.cpp  LJZxStream.h  Lidil.cpp  Lidil.h  LidilCompress.cpp  LidilCompress.h  LidilPrintModes.h  Mode10.cpp  (+61 more)
prnt/hpijs/: PrinterProperties.cpp  PrinterProperties.h  README_LIBJPG  apollo21xx.cpp  apollo21xx.h  apollo2560.cpp  apollo2560.h  apollo2xxx.cpp  apollo2xxx.h  auto-include.h  breaks_open.cpp  bug.h  capture.cpp  colormatch.cpp  colormatch.h  colormatcher_open.cpp  colormatcher_open.h  compression.cpp  compression.h  config.h  context.h  context2.cpp  create_so.cpp  creator.cpp  debug.h  dj3320.cpp  dj3320.h  dj3320_cmap.cpp  dj350.cpp  dj350.h  dj3600.cpp  dj3600.h  dj3600_cmap.cpp  dj400.h  dj4100.h  dj4100_cmap.cpp  dj540.cpp  dj540.h  dj55xx.h  dj600.cpp  (+123 more)
protocol/: hp_ipp.c  hp_ipp.h  hp_ipp_i.h
protocol/discovery/: mdns.c  mdns.h
scan/: sane.py
scan/sane/: bb_ledm.c  common.c  common.h  escl.c  escl.h  escli.h  hpaio.c  hpaio.desc  hpaio.h  http.c  http.h  io.c  io.h  ledm.c  ledm.h  ledmi.h  marvell.c  marvell.h  marvelli.h  mfpdtf.c  mfpdtf.h  pml.c  pml.h  scl.c  scl.h  sclpml.c  sclpml.h  soap.c  soap.h  soapht.c  soapht.h  soaphti.h  soapi.h  tables.h  xml.c  xml.h
scan/scanext/: scanext.c
selinux/: hplip.pp  hplip.te
